--- a/OnlineTrading/style1.css
+++ b/OnlineTrading/style1.css
@@ -5,7 +5,7 @@
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: #5a5a5a;
+  color: #ffffff;
   background-color: rgb(79, 79, 79);
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
@@ -149,6 +149,6 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
+  color: rgb(255, 255, 255);
   border-bottom-color: #fff;
 }
