commit deleted sign

--- a/OnlineTrading/style1.css
+++ b/OnlineTrading/style1.css
@@ -275,7 +275,9 @@ body {
 img{
    transparancy: 0.5;
 }
-
+.label-viu2QKQw.label-eo9LfqxG.start-viu2QKQw.start-eo9LfqxG.bottom-viu2QKQw.js-copyright-label {
+  display: none !important;
+}
 
 
 
